# SoftRenderer

./: CMakeLists.txt  README.md  main.cpp
src/: camera.h
src/core/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  maths.cpp  maths.h  model.cpp  model.h  rasterizer.cpp  rasterizer.h  scene.cpp  scene.h  shader.h  tgaimage.cpp  tgaimage.h
src/gui/: framebufferwidget.cpp  framebufferwidget.h  lightcontrolwidget.cpp  lightcontrolwidget.h  mainwindow.cpp  mainwindow.h
src/scene/: african_head_scene.cpp  scene_list.h
src/shader/: gouraud_shader.cpp  phong_shader.cpp  shader.h
